# nvcore

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cc
cmake/: ProjectCXX.cmake
inc/nvm/: events.h  logic.h  macro.h  memory.h  nullable.h  nvm_core.h  option.h  random.h  result.h  span.h  stopwatch.h  struct_mapper.h  vector_ex.h
inc/nvm/bytes/: byte.h  byte_declaration.h
inc/nvm/bytes/details/: internal_byte_ch.cc  internal_byte_ch.h  internal_byte_u8.cc  internal_byte_u8.h
inc/nvm/containers/: nv_select.h  record_def.h  record_filter.h  record_groupby.h  record_operation.h  record_orderby.h  record_page.h  record_select.h  record_sort.h  record_sort.hb  validations.h
inc/nvm/date/: datetime.h
inc/nvm/dates/: datetime.cc  datetime.h  datetime_part.h
inc/nvm/dates/details/: datetime_detail_impl.h
inc/nvm/exceptions/: exception.h
inc/nvm/io/: byte_stream.h
inc/nvm/maths/: approx.h  math.h
inc/nvm/sqlbuilder/: def.h  fields.h  from.h  group_by.h  join.h  limit_offset.h  limit_offset_statement.h  nv_select_builder.h  operation.h  order_by.h  where.h
inc/nvm/sqlbuilder/policy/: order_by.h  policy_base.h
inc/nvm/strings/: naming_style.h  readable_bytes.h  utf8string.h  utility.h
inc/nvm/threads/: async_executor.h  def.h  promisizer.h  task.h  task_impl.h  task_pool.h  utils.h
inc/nvm/types/: dynamic_cast.h  extended_type.h  type_utility.h
inc/nvm/validators/: nv_validator.h  rule.h
tests/nvm/: CMakeLists.txt  byte_converter_decode_test.cc  byte_converter_encode_test_big_endian.cc  byte_converter_encode_test_little_endian.cc  datetime_test.cc  logic_test.cc  main.cc  record_test.cc  select_test.cc  span_test.cc  struct_mapper_test.cc  type_utility_test.cc  validation_test.cc
tests/nvm/nvasync/: nv_async_test.cc
tests/nvm/nvsql-policy/: order_by_policy_test.cc
